# lms-api-master

./: .coverage  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: settings.py  urls.py
materials/: models.py  paginations.py  permissions.py  serializer.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/management/commands/: add_test_data.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_link_to_the_video.py  0004_course_price.py  0005_alter_lesson_options.py
users/: models.py  serializer.py  services.py  tasks.py  tests.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscriptions.py  0004_alter_payments_options_alter_subscriptions_options_and_more.py  0005_alter_payments_payment_method.py  0006_alter_payments_paid_course.py  0007_remove_payments_price.py  0008_alter_payments_link.py
